frontend/src/models/models.css
.models {
  position: relative;
  display: flex;
  flex-direction: row;
  min-height: calc(100% - 56px);
}

.models button.gray {
  color: black;
  background-color: #eee;
}

.models .model-selector {
  flex-grow: 0;
  padding: 15px;
  padding-top: 0px;
}

.models h1 {
  margin-top: 0px;
}

.models .documents {
  flex-grow: 1;
  overflow: scroll;
  max-height: calc(100vh - 56px);
}

.models .documents table {
  /* max-width: -moz-fit-content;
  max-width: fit-content; */
  width: 100%;
  table-layout: auto;
  font-size: small;
  padding: 0;
  margin-right: 1em;
  white-space: nowrap;
  z-index: -1;
  border-collapse: collapse;
  line-height: 1.5em;
}

.models .documents table th {
  position: sticky;
  top: 42px;
  z-index: 1;
}

.models .documents table th:after {
  content: "";
  position: absolute;
  left: 0;
  width: 100%;
  bottom: -1px;
  border-bottom: thin solid rgba(0, 0, 0, 0.12);
}

.models .documents table tr {
  color: black;
  border-spacing: 0px 0px;
}

.models .documents table th {
  border-bottom: thin solid rgba(0, 0, 0, 0.12);
  text-align: left;
  height: 48px;
}

.models .documents table td {
  border-bottom: thin solid rgba(0, 0, 0, 0.12);
  text-align: left;
}

.models textarea {
  font-size: 1.2em;
}

.models .path-type {
  color: rgba(0, 0, 0, 0.36);
  font-size: 0.8em;
}

.models .documents-menu {
  position: fixed;
  z-index: 1;
  padding: 4px;
  display: flex;
  width: 100vw;
}

@media (min-width: 1024px) {
  .models .documents-menu {
    width: calc(100vw - 16rem);
  }
}

.models .documents-menu .search-input {
  flex-grow: 1;
  align-items: center;
}

.models .search-input input {
  padding: 0.25em 0.5em;
  font-size: 1.1em;
  border: 1px solid #ddd;
  border-radius: 3px;
  width: calc(100% - 1em);
}

.models .sort-arrow {
  padding-left: 10px;
  padding-right: 10px;
}

.models .loader {
  width: 100%;
  text-align: center;
}

.models .loader img {
  height: 4em;
}

.models .documents .buttons {
  display: inline-flex;
  justify-content: space-around;
  align-items: center;
}

